bg transition and font size on mobile fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,7 +88,7 @@ a:hover {
   }
 }
 
-@media(max-width: 350px) {
+@media(max-width: 400px) {
   body {
     font-size: 0.75rem;
   }
